# Kalman

./: Kalman.cabal  LICENSE  README.md  kalman.cabal  matlabRNGs.csv  pendulum_sim.m  stack.yaml
src/: Kalman.hs
src/Numeric/: Kalman.hs  Particle.hs
test/: HaddockExample.hs  MultivariateNormal.hs  ParticleTest.hs  Spec.hs
