name:                Kalman
version:             0.1.0.0
synopsis:            A slightly extended Kalman filter
homepage:            https://github.com/idontgetoutmuch/Kalman
license:             BSD3
license-file:        LICENSE
author:              Dominic Steinitz
maintainer:          dominic@steinitz.org
copyright:           Dominic Steinitz
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Kalman
  other-extensions:    DataKinds,
                       ScopedTypeVariables,
                       TypeOperators,
                       TypeFamilies
  build-depends:       base >=4.7 && <4.8,
                       hmatrix >=0.16 && <0.17
  hs-source-dirs:      src
  default-language:    Haskell2010
