name:                kalman
version:             1.0.0.2
synopsis:            Kalman and particle filters and smoothers
description:         Linear, extended and unscented Kalman filters are provided, along
                     with their corresponding smoothers. Furthermore, a particle filter
                     and smoother is provided.
homepage:            https://github.com/idontgetoutmuch/Kalman
license:             MIT
license-file:        LICENSE
author:              Dominic Steinitz, Jacob West
maintainer:          dominic@steinitz.org
copyright:           Dominic Steinitz, Jacob West
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, diagrams/*.png, diagrams/*.svg
extra-doc-files:     diagrams/*.png, diagrams/*.svg

source-repository head
  type:     git
  location: https://github.com/idontgetoutmuch/Kalman

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Numeric.Kalman,
                     Numeric.Particle
  ghc-options:       -Wall
  build-depends:     base >= 4.7 && < 5
                   , hmatrix
                   , random-fu
                   , random-fu-multivariate
                   , vector

test-suite kalman-test
  default-language:  Haskell2010
  hs-source-dirs:    test
  main-is:           Spec.hs
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base
                   , kalman
                   , hmatrix
                   , random-fu
                   , random-fu-multivariate
                   , Chart
                   , Chart-cairo
                   , Chart-diagrams